--- a/GraduateWork/Searchengine/application.yaml
+++ b/GraduateWork/Searchengine/application.yaml
@@ -10,8 +10,9 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
+
     hibernate:
-        ddl-auto: update
+        ddl-auto: create
     show-sql: true
 
 indexing-settings:
